kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: pythonproject
spec:
  selector:
    app: pythonproject
  ports:
  - protocol: "TCP"
    port: 6000
    targetPort: 5000
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pythonproject
spec:
  selector:
    matchLabels:
      app: pythonproject
  replicas: 4
  template:
    metadata:
      labels:
        app: pythonproject
    spec:
      containers:
      - name: pythonproject
        image: pythonproject:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
